# pkg/api/v1/simulation-service.pb.gw.go
@@ -297,6 +297,31 @@ func request_SimulationService_UnsubscribeSpectatorFromRegion_0(ctx context.Cont
 
 }
 
+var (
+	filter_SimulationService_CreateRemoteModel_0 = &utilities.DoubleArray{Encoding: map[string]int{}, Base: []int(nil), Check: []int(nil)}
+)
+
+func request_SimulationService_CreateRemoteModel_0(ctx context.Context, marshaler runtime.Marshaler, client SimulationServiceClient, req *http.Request, pathParams map[string]string) (SimulationService_CreateRemoteModelClient, runtime.ServerMetadata, error) {
+	var protoReq CreateRemoteModelRequest
+	var metadata runtime.ServerMetadata
+
+	if err := runtime.PopulateQueryParameters(&protoReq, req.URL.Query(), filter_SimulationService_CreateRemoteModel_0); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	stream, err := client.CreateRemoteModel(ctx, &protoReq)
+	if err != nil {
+		return nil, metadata, err
+	}
+	header, err := stream.Header()
+	if err != nil {
+		return nil, metadata, err
+	}
+	metadata.HeaderMD = header
+	return stream, metadata, nil
+
+}
+
 // RegisterSimulationServiceHandlerFromEndpoint is same as RegisterSimulationServiceHandler but
 // automatically dials to "endpoint" and closes the connection when "ctx" gets done.
 func RegisterSimulationServiceHandlerFromEndpoint(ctx context.Context, mux *runtime.ServeMux, endpoint string, opts []grpc.DialOption) (err error) {
@@ -515,6 +540,26 @@ func RegisterSimulationServiceHandlerClient(ctx context.Context, mux *runtime.Se
 
 	})
 
+	mux.Handle("GET", pattern_SimulationService_CreateRemoteModel_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateContext(ctx, mux, req)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_SimulationService_CreateRemoteModel_0(rctx, inboundMarshaler, client, req, pathParams)
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_SimulationService_CreateRemoteModel_0(ctx, mux, outboundMarshaler, w, req, func() (proto.Message, error) { return resp.Recv() }, mux.GetForwardResponseOptions()...)
+
+	})
+
 	return nil
 }
 
@@ -536,6 +581,8 @@ var (
 	pattern_SimulationService_SubscribeSpectatorToRegion_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2, 2, 3}, []string{"v1", "spectator", "id", "subscribeToRegion"}, ""))
 
 	pattern_SimulationService_UnsubscribeSpectatorFromRegion_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2, 2, 3}, []string{"v1", "spectator", "id", "unsubscribeFromRegion"}, ""))
+
+	pattern_SimulationService_CreateRemoteModel_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "createRemoteModel"}, ""))
 )
 
 var (
@@ -556,4 +603,6 @@ var (
 	forward_SimulationService_SubscribeSpectatorToRegion_0 = runtime.ForwardResponseMessage
 
 	forward_SimulationService_UnsubscribeSpectatorFromRegion_0 = runtime.ForwardResponseMessage
+
+	forward_SimulationService_CreateRemoteModel_0 = runtime.ForwardResponseStream
 )
